# serializer version: 1
# name: TestHistoricalExports.test_historical_export_metrics
  '''
  
  SELECT groupArray(date),
         groupArray(successes),
         groupArray(successes_on_retry),
         groupArray(failures)
  FROM
    (SELECT date, sum(CASE
                          WHEN category = 'composeWebhook' THEN 0
                          ELSE successes
                      END) AS successes,
                  sum(successes_on_retry) AS successes_on_retry,
                  sum(failures) AS failures
     FROM
       (SELECT category,
               dateTrunc('hour', timestamp, 'UTC') AS date,
               sum(successes) AS successes,
               sum(successes_on_retry) AS successes_on_retry,
               sum(failures) AS failures
        FROM app_metrics
        WHERE team_id = 99999
          AND plugin_config_id = 3
          AND category = 'exportEvents'
          AND job_id = '1234'
          AND timestamp >= '2021-08-25 00:00:00'
          AND timestamp < '2021-08-25 06:00:00'
        GROUP BY dateTrunc('hour', timestamp, 'UTC'),
                 category)
     GROUP BY date
     ORDER BY date WITH FILL
     FROM dateTrunc('hour', toDateTime64('2021-08-25 00:00:00', 0, 'UTC'), 'UTC') TO dateTrunc('hour', toDateTime64('2021-08-25 06:00:00', 0, 'UTC') + toIntervalHour(1), 'UTC') STEP toIntervalHour(1))
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.1
  '''
  
  SELECT error_type,
         count() AS count,
         max(timestamp) AS last_seen
  FROM app_metrics
  WHERE team_id = 99999
    AND plugin_config_id = 3
    AND category = 'exportEvents'
    AND job_id = '1234'
    AND timestamp >= '2021-08-25 00:00:00'
    AND timestamp < '2021-08-25 06:00:00'
    AND error_type <> ''
  GROUP BY error_type
  ORDER BY count DESC
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.2
  '''
  SELECT "insights_activitylog"."id",
         "insights_activitylog"."team_id",
         "insights_activitylog"."organization_id",
         "insights_activitylog"."user_id",
         "insights_activitylog"."was_impersonated",
         "insights_activitylog"."is_system",
         "insights_activitylog"."activity",
         "insights_activitylog"."item_id",
         "insights_activitylog"."scope",
         "insights_activitylog"."detail",
         "insights_activitylog"."created_at"
  FROM "insights_activitylog"
  WHERE ("insights_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("insights_activitylog"."detail" #> '{trigger,job_id}') = '"1234"'::jsonb
         AND ("insights_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "insights_activitylog"."item_id" = '3'
         AND "insights_activitylog"."scope" = 'PluginConfig'
         AND "insights_activitylog"."team_id" = 99999)
  '''
# ---
# name: TestHistoricalExports.test_historical_export_metrics.3
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."temporary_token",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."hedgehog_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_failed_export
  '''
  SELECT "insights_activitylog"."id",
         "insights_activitylog"."team_id",
         "insights_activitylog"."organization_id",
         "insights_activitylog"."user_id",
         "insights_activitylog"."was_impersonated",
         "insights_activitylog"."is_system",
         "insights_activitylog"."activity",
         "insights_activitylog"."item_id",
         "insights_activitylog"."scope",
         "insights_activitylog"."detail",
         "insights_activitylog"."created_at"
  FROM "insights_activitylog"
  WHERE ("insights_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("insights_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "insights_activitylog"."item_id" = '3'
         AND "insights_activitylog"."scope" = 'PluginConfig'
         AND "insights_activitylog"."team_id" = 99999)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_failed_export.1
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."temporary_token",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."hedgehog_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_finished_export
  '''
  SELECT "insights_activitylog"."id",
         "insights_activitylog"."team_id",
         "insights_activitylog"."organization_id",
         "insights_activitylog"."user_id",
         "insights_activitylog"."was_impersonated",
         "insights_activitylog"."is_system",
         "insights_activitylog"."activity",
         "insights_activitylog"."item_id",
         "insights_activitylog"."scope",
         "insights_activitylog"."detail",
         "insights_activitylog"."created_at"
  FROM "insights_activitylog"
  WHERE ("insights_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("insights_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "insights_activitylog"."item_id" = '3'
         AND "insights_activitylog"."scope" = 'PluginConfig'
         AND "insights_activitylog"."team_id" = 99999)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_finished_export.1
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."temporary_token",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."hedgehog_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export
  '''
  SELECT "insights_activitylog"."id",
         "insights_activitylog"."team_id",
         "insights_activitylog"."organization_id",
         "insights_activitylog"."user_id",
         "insights_activitylog"."was_impersonated",
         "insights_activitylog"."is_system",
         "insights_activitylog"."activity",
         "insights_activitylog"."item_id",
         "insights_activitylog"."scope",
         "insights_activitylog"."detail",
         "insights_activitylog"."created_at"
  FROM "insights_activitylog"
  WHERE ("insights_activitylog"."activity" IN ('job_triggered',
                                              'export_success',
                                              'export_fail')
         AND ("insights_activitylog"."detail" #> '{trigger,job_type}') = '"Export historical events V2"'::jsonb
         AND "insights_activitylog"."item_id" = '3'
         AND "insights_activitylog"."scope" = 'PluginConfig'
         AND "insights_activitylog"."team_id" = 99999)
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export.1
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."temporary_token",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."requested_password_reset_at",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."hedgehog_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestHistoricalExports.test_historical_exports_activity_for_not_finished_export.2
  '''
  SELECT "insights_pluginstorage"."id",
         "insights_pluginstorage"."plugin_config_id",
         "insights_pluginstorage"."key",
         "insights_pluginstorage"."value"
  FROM "insights_pluginstorage"
  WHERE ("insights_pluginstorage"."key" = 'EXPORT_COORDINATION'
         AND "insights_pluginstorage"."plugin_config_id" = 99999)
  ORDER BY "insights_pluginstorage"."id" ASC
  LIMIT 1
  '''
# ---
